# wallpaperswitch

./: .gitignore  CMakeLists.txt  README.kubuntu  README.md  genversion.sh
desktop/: CMakeLists.txt  wallpaperswitch.desktop
src/: CMakeLists.txt  debug.h  main.cpp  preferencesdialogue.cpp  preferencesdialogue.h  settings.kcfg  settings.kcfgc  switcher.cpp  switcher.h  systemtraywidget.cpp  systemtraywidget.h  wallpaperswitch.cpp  wallpaperswitch.h
